Bug 1274726. Clamp scaled image before repeating during prescale and repeat on OS X. r=jrmuizel